<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.friends.FriendsFragment"
    android:background="@color/white">

    <Button
        android:id="@+id/btnAddFriends"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_plus_white"
        android:text="@string/add_friends"
        />

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/friendsTabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/selected_tab_background"
            app:tabIndicatorHeight="0dp"
            app:tabPaddingEnd="24dp"
            app:tabPaddingStart="24dp"
            app:tabPaddingTop="0dp"
            app:tabPaddingBottom="0dp"
            app:tabTextColor="@color/orange"
            app:tabSelectedTextColor="@color/white"
            app:tabInlineLabel="true">

            <com.google.android.material.tabs.TabItem
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"/>

            <com.google.android.material.tabs.TabItem
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requests"/>
        </com.google.android.material.tabs.TabLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">
        <SearchView
            android:id="@+id/searchFriends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:queryHint="Search For Friends" >
        </SearchView>
    </LinearLayout>

    <TextView
        android:id="@+id/noFriendRequests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/you_have_no_friend_requests"
        android:visibility="visible" />

    <TextView
        android:id="@+id/noFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/you_have_no_friends"
        android:visibility="visible" />


    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- RecyclerView to display the feed -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>