...
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <Button
            android:id="@+id/addFriendButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/add_friend"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <Button
            android:id="@+id/removeFriendButton"
            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/remove_friend"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
...
