...
    <!--Friends-->
    <string name="add_friend">Add Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="request">Request</string>
    <string name="add_friends">Add Friends</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="reject_request">Reject</string>
    <string name="accept_request">Accept</string>
    <string name="view_friend_requests">View Friend Requests</string>
    <string name="title_activity_maps">Choose a location</string>
    <string name="you_have_no_friend_requests">You have no incoming friend requests</string>
    <string name="requests">Requests</string>
...
