...
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_orange_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_orange_24dp"
        android:title="@string/title_map"/>

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_review_orange_24dp"
...
